Fix broken ui for empty categories and add placeholder

--- a/app/assets/stylesheets/events.css.less
+++ b/app/assets/stylesheets/events.css.less
@@ -28,6 +28,15 @@
 
   #filter-controls {
     height: 100%;
+    .add-event {
+      .clickable(@orange);
+      margin-bottom: 10px;
+
+      span {
+        padding-left: 10px;
+        font-size: 30px;
+      }
+    }
   }
 
   #filter-address {
@@ -54,15 +63,7 @@
     margin: 0;
   }
 
-  #add-event {
-    .clickable(@orange);
-    margin-bottom: 10px;
-
-    span {
-      padding-left: 10px;
-      font-size: 30px;
-    }
-  }
+ 
 
   #topic-select {
     color: @orange;
@@ -102,6 +103,14 @@
     height: 100%;
     overflow: auto;
     list-style: none;  
+  }
+
+  .no-events-placeholder {
+    color: @gray;
+    .add-event {
+      .clickable(@orange);
+      font-weight: bold;
+    }
   }
 
   #topic-select .custom{
