--- a/app/assets/stylesheets/shared.css.less
+++ b/app/assets/stylesheets/shared.css.less
@@ -16,7 +16,7 @@ body {
 }
 
 .container {
-  max-width: 1080px;
+  width: 960px;
   margin: 0 auto;
 }
 
